--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -116,7 +116,8 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: #585858;
+		/* color: #585858; */
+		color: #fff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -2708,15 +2709,18 @@ input, select, textarea {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #035FAA;
+				/* background-color: #035FAA; */
+				background-color: #c6c6c6;
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #7ecaf6;
+				/* background-color: #7ecaf6; */
+				background-color: #c6c6c6;
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #7bd0c1;
+				/* background-color: #7bd0c1; */
+				background-color: #c6c6c6;
 			}
 
 			.tiles article.style4 > .image:before {
@@ -2983,6 +2987,12 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 		-ms-transition: opacity 0.45s ease;
 		transition: opacity 0.45s ease;
 		opacity: 1;
+		background: url("../../../../images/PrimeTimeGraphics_StandardBackdrop.png") no-repeat center center fixed;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+
 	}
 
 	#menu {
@@ -3181,7 +3191,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 
 	#footer {
 		padding: 3em 0 1em 0 ;
-		background-color: #f6f6f6;
+		/* background-color: #f6f6f6; */
 	}
 
 		#footer > .inner {
