--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -154,7 +154,7 @@ input, select, textarea {
 		a:hover {
 			border-bottom-color: transparent;
 			/* color: #f2849e !important; */
-			color: #035FAA !important;
+			color: #fff !important;
 		}
 
 	strong, b {
@@ -1859,8 +1859,8 @@ input, select, textarea {
 			}
 
 			.icon.style2:hover {
-				color: #035FAA;
-				border-color: #035FAA;
+				color: #fff;
+				border-color: #fff;
 			}
 
 			.icon.style2:active {
@@ -2173,8 +2173,8 @@ input, select, textarea {
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-bottom-color: #035FAA;
-			box-shadow: inset 0 -1px 0 0 #035FAA;
+			border-bottom-color: #fff;
+			box-shadow: inset 0 -1px 0 0 #fffA;
 		}
 
 	select {
@@ -2278,8 +2278,8 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #035FAA;
-			box-shadow: 0 0 0 1px #035FAA;
+			border-color: #fff;
+			box-shadow: 0 0 0 1px #fff;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2497,8 +2497,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #035FAA !important;
-			box-shadow: inset 0 0 0 2px #035FAA;
+			color: #fff !important;
+			box-shadow: inset 0 0 0 2px #fff;
 		}
 
 		input[type="submit"]:active,
@@ -2532,7 +2532,7 @@ input, select, textarea {
 		.button.primary {
 			box-shadow: none;
 			background-color: #585858;
-			color: #ffffff !important;
+			color: #AAAAAA !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2540,7 +2540,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #035FAA;
+				background-color: #fff;
 			}
 
 			input[type="submit"].primary:active,
@@ -2549,7 +2549,7 @@ input, select, textarea {
 			button.primary:active,
 			.button.primary:active {
 				/* background-color: #ee5f81; */
-				background-color: #035FAA;
+				background-color: #fff;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2841,11 +2841,6 @@ input, select, textarea {
 
 	#header {
 		padding: 8em 0 0.1em 0 ;
-		/* background: url("../../../../images/PrimeTimeGraphics_StandardBackdrop.png") no-repeat center center fixed; */
-		/* -webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-		background-size: cover; */
 		margin-bottom: 2em;
 		color: #AAAAAA;
 	}
@@ -2966,12 +2961,13 @@ input, select, textarea {
 
 						#header nav ul li a[href="#menu"]:before {
 							/* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %23f2849e%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E"); */
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: rgba(3,95,170,1) %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
+background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: rgb(255,255,255) %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
 							opacity: 0;
 						}
 
 						#header nav ul li a[href="#menu"]:after {
-							background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %23585858%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
+							/* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %23585858%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E"); */
+							background-image: url("data:image/svg+xml;charset=utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'><style>line %7B stroke-width: 8px%3B stroke: rgb(170,170,170) </style><line x1='0' y1='25' x2='100' y2='25' /><line x1='0' y1='50' x2='100' y2='50' /><line x1='0' y1='75' x2='100' y2='75' /></svg>");
 							opacity: 1;
 						}
 
