--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -3004,11 +3004,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 		-ms-transition: opacity 0.45s ease;
 		transition: opacity 0.45s ease;
 		opacity: 1;
-		background: url("../../../../images/PrimeTimeGraphics_StandardBackdrop.png") no-repeat center center fixed; */
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-		background-size: cover;
+		background: #fff;
 	}
 
 	#menu {
