--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -117,8 +117,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		/* color: #585858; */
-		color: #fff;
+		color: #585858;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -154,7 +153,7 @@ input, select, textarea {
 		a:hover {
 			border-bottom-color: transparent;
 			/* color: #f2849e !important; */
-			color: #fff !important;
+			color: #0067AC !important;
 		}
 
 	strong, b {
@@ -2691,7 +2690,7 @@ input, select, textarea {
 
 				.tiles article > a h2 {
 					margin: 0;
-					color: #002D7A;
+					color: #fff;
 				}
 
 				.tiles article > a .content {
@@ -2712,32 +2711,32 @@ input, select, textarea {
 
 			.tiles article.style1 > .image:before {
 				/* background-color: #035FAA; */
-				background-color: #c6c6c6;
+				background-color: #0067AC;
 			}
 
 			.tiles article.style2 > .image:before {
 				/* background-color: #7ecaf6; */
-				background-color: #c6c6c6;
+				background-color: #0067AC;
 			}
 
 			.tiles article.style3 > .image:before {
 				/* background-color: #7bd0c1; */
-				background-color: #c6c6c6;
+				background-color: #0067AC;
 			}
 
 			.tiles article.style4 > .image:before {
 				/* background-color: #c75b9b; */
-				background-color: #c6c6c6;
+				background-color: #0067AC;
 			}
 
 			.tiles article.style5 > .image:before {
 				/* background-color: #ae85ca; */
-				background-color: #c6c6c6;
+				background-color: #0067AC;
 			}
 
 			.tiles article.style6 > .image:before {
 				/* background-color: #8499e7; */
-				background-color: #c6c6c6;
+				background-color: #0067AC;
 			}
 
 			body:not(.is-touch) .tiles article:hover > .image {
@@ -2842,7 +2841,7 @@ input, select, textarea {
 	#header {
 		padding: 8em 0 0.1em 0 ;
 		margin-bottom: 2em;
-		color: #AAAAAA;
+		color: #585858;
 	}
 
 		#header .logo {
@@ -2961,13 +2960,13 @@ input, select, textarea {
 
 						#header nav ul li a[href="#menu"]:before {
 							/* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %23f2849e%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E"); */
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: rgb(255,255,255) %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
+background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: rgb(0,103,172) %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
 							opacity: 0;
 						}
 
 						#header nav ul li a[href="#menu"]:after {
 							/* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %23585858%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E"); */
-							background-image: url("data:image/svg+xml;charset=utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'><style>line %7B stroke-width: 8px%3B stroke: rgb(170,170,170) </style><line x1='0' y1='25' x2='100' y2='25' /><line x1='0' y1='50' x2='100' y2='50' /><line x1='0' y1='75' x2='100' y2='75' /></svg>");
+							background-image: url("data:image/svg+xml;charset=utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'><style>line %7B stroke-width: 8px%3B stroke: rgb(88,88,88) </style><line x1='0' y1='25' x2='100' y2='25' /><line x1='0' y1='50' x2='100' y2='50' /><line x1='0' y1='75' x2='100' y2='75' /></svg>");
 							opacity: 1;
 						}
 
@@ -3242,7 +3241,8 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 				list-style: none;
 				font-size: 0.8em;
 				text-align: center;
-				color: rgba(88, 88, 88, 0.5);
+				/* color: rgba(88, 88, 88, 0.5); */
+				color: #585858;
 			}
 
 				#footer > .inner .copyright a {
