--- a/public/css/index.css
+++ b/public/css/index.css
@@ -56,6 +56,22 @@ img {
   }
 }
 
+.fade {
+  animation: transitionIn 2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: rotateX(-40deg);
+  }
+
+  to {
+    opacity: 1;
+    transform: rotateX(0);
+  }
+}
 
 .links {
   width: 100%;
