Changed two hover colors to blue.

--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -1859,7 +1859,7 @@ input, select, textarea {
 
 			.icon.style2:hover {
 				color: #fff;
-				border-color: #fff;
+				border-color: #0067AC;
 			}
 
 			.icon.style2:active {
@@ -2531,7 +2531,7 @@ input, select, textarea {
 		.button.primary {
 			box-shadow: none;
 			background-color: #585858;
-			color: #AAAAAA !important;
+			color: #fff !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2539,7 +2539,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #fff;
+				background-color: #0067AC;
 			}
 
 			input[type="submit"].primary:active,
