--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -2820,7 +2820,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		padding: 8em 0 0.1em 0 ;
+		padding: 4em 0 0.1em 0 ;
 		margin-bottom: 2em;
 		color: #585858;
 	}
@@ -3280,7 +3280,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 		@media screen and (max-width: 736px) {
 
 			#footer {
-				padding: 3em 0 1em 0 ;
+				padding: 1em 0 1em 0 ;
 			}
 
 				#footer > .inner {
@@ -3347,3 +3347,50 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 			}
 
 		}
+
+
+/* Contact */
+
+	.contact-left {
+		width: 50%;
+		height: 100vh;
+		background: url("../../../images/PrimeTimeGraphics_StandardBackdrop.png") no-repeat center center fixed;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		color: #fff;
+		display: flex;
+		align-items: center;
+		overflow: hidden;
+	}
+
+	.contact-right {
+		width: 50%;
+		height: 100vh;
+		overflow: hidden;
+	}
+
+	.get-in-touch {
+		letter-spacing: 0.07em;
+		margin-left: 25%;
+	}
+
+	@media screen and (max-width: 736px) {
+
+		.contact-left {
+			width: 100%;
+			height: 50vh;
+		}
+
+		.contact-right {
+			width: 100%;
+			height: 50vh;
+		}
+
+		.get-in-touch {
+			letter-spacing: 0.07em;
+			margin-left: 30%;
+		}
+
+	}
