Added animation from index page to contact page.

--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -3372,7 +3372,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 	}
 
 	.get-in-touch {
-		letter-spacing: 0.07em;
+		letter-spacing: 0.1em;
 		margin-left: 25%;
 	}
 
@@ -3393,4 +3393,21 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 			margin-left: 30%;
 		}
 
+	}
+
+	.fade {
+	  animation: transitionIn 1.5s;
+	  animation-fill-mode: forwards;
+	}
+
+	@keyframes transitionIn {
+	  from {
+	    opacity: 0;
+	    transform: rotateX(-40deg);
+	  }
+
+	  to {
+	    opacity: 1;
+	    transform: rotateX(0);
+	  }
 	}
