Small color changes on menu.

--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -3005,7 +3005,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
 		background: #585858;
-		color: #ffffff;
+		color: #aaa;
 		cursor: default;
 		visibility: hidden;
 		z-index: 10002;
