--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -2857,7 +2857,7 @@ input, select, textarea {
 		}
 
 		#header nav .logo-title {
-			position: fixed;
+			/* position: fixed; */
 			top: 2em;
 			z-index: 10000;
 		}
