--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -3378,6 +3378,15 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 
 	@media screen and (max-width: 736px) {
 
+    nav {
+      padding: 0;
+      margin: 0;
+    }
+
+    .logo-title {
+      display: none;
+    }
+
 		.contact-left {
 			width: 100%;
 			height: 50vh;
@@ -3385,7 +3394,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 
 		.contact-right {
 			width: 100%;
-			height: 50vh;
+			/* height: 50vh; */
 		}
 
 		.get-in-touch {
