--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -2447,7 +2447,7 @@ input, select, textarea {
 
 /* Button */
 
-	input[type="submit"],
+	/* input[type="submit"], */
 	input[type="reset"],
 	input[type="button"],
 	button,
