--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -3372,8 +3372,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 	}
 
 	.get-in-touch {
-		letter-spacing: 0.1em;
-		margin-left: 25%;
+		margin: 5%;
 	}
 
 	@media screen and (max-width: 736px) {
@@ -3398,8 +3397,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
 		}
 
 		.get-in-touch {
-			letter-spacing: 0.07em;
-			margin-left: 30%;
+			margin: 0;
 		}
 
 	}
