Commented out primetime title and logo to see if it looks better.

--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -2843,7 +2843,7 @@ input, select, textarea {
 			}
 
 			#header .logo .symbol {
-				margin-right: 0.65em;
+				/* margin-right: 0.65em; */
 			}
 
 				#header .logo .symbol img {
