--- a/public/phantom/assets/css/main.css
+++ b/public/phantom/assets/css/main.css
@@ -2904,7 +2904,7 @@ input, select, textarea {
 						height: 3em;
 						line-height: 3em;
 						padding: 0 1.5em;
-						/* background-color: rgba(255, 255, 255, 0.5); */
+						background-color: rgba(255, 255, 255, 0.5);
 						border-radius: 4px;
 						border: 0;
 						font-size: 0.8em;
